# onelogin-python-sdk

./: .gitignore  .gitlab-ci.yml  .travis.yml  =67.7.1  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  app_script.py  nextgen_genToken.py  pyproject.toml  requirements.txt  sample_script.py  setup.py  test_sdk.py  tox.ini  update_docstrings.py  user_script.py
.github/python/: tox.ini
.github/workflows/: continuous-integration.yml  git-secrets-public.yml  python-publish.yml  python.yml
.openapi-generator/: FILES
docs/: APIAuthClaimsApi.md  APIAuthClientAppsApi.md  APIAuthScopesApi.md  APIAuthorizationServerApi.md  Action.md  ActionObj.md  ActivateFactorRequest.md  ActivateMfaFactorsRequest.md  AddAccessTokenClaimRequest.md  AddClientApp201Response.md  AddClientAppRequest.md  AddPrivilegeToRole201Response.md  AddPrivilegeToRoleRequest.md  AddRoleUsers200ResponseInner.md  AddRolesToUserRequest.md  AddScopeRequest.md  AltErr.md  AppParameters.md  AppParametersValue.md  AppRule.md  AppRulesApi.md  AppsApi.md  AssignUsersToPrivilegeRequest.md  AuthClaim.md  AuthFactor.md  AuthId.md  AuthMethod.md  AuthScope.md  AuthServer.md  AuthServerConfiguration.md  Brand.md  BrandApp.md  BrandBackground.md  BrandBackgroundUrls.md  BrandLogo.md  BrandLogoUrls.md  BrandReq.md  BrandingServiceApi.md  BrandingServiceSMTPApi.md  BrandingServiceTemplatesApi.md  (+288 more)
docs/models/: ActionObj.md  AppParameters.md  AuthId.md  AuthMethod.md  AuthScope.md  AuthServer.md  AuthServerConfiguration.md  ClockCounter.md  Condition.md  Device.md  EnforcementPoint.md  GenericApp.md  HookEnvvar.md  HookStatus.md  Id.md  Ip.md  OtpDevice.md  Privilege.md  RiskDevice.md  RiskUser.md  RuleAction.md  RuleCondition.md  SamlAssert.md  SamlFactor.md  Scope.md  Session.md  Source.md  SsoSaml.md  User.md  UserAgent.md  Verb.md
examples/: README.md  onelogin_import_users.py
onelogin/: __init__.py  api_client.py  configuration.py  exceptions.py  model_utils.py  pyvenv.cfg  rest.py  schemas.py
onelogin/api/: __init__.py  api_auth_claims_api.py  api_auth_client_apps_api.py  api_auth_scopes_api.py  api_authorization_server_api.py  app_rules_api.py  apps_api.py  branding_service_api.py  branding_service_smtp_api.py  branding_service_templates_api.py  default_api.py  events_api.py  groups_api.py  invite_links_api.py  multi_factor_authentication_api.py  multi_factor_authentication_v1_api.py  o_auth2_api.py  privileges_api.py  roles_api.py  saml_assertions_api.py  smart_hooks_api.py  user_mappings_api.py  users_v1_api.py  users_v2_api.py  (+1 more)
openapi_client/: __init__.py  api_client.py  configuration.py  exceptions.py  model_utils.py  rest.py
test/: test_action.py  test_action_obj.py  test_activate_factor_request.py  test_activate_mfa_factors_request.py  test_add_access_token_claim_request.py  test_add_client_app201_response.py  test_add_client_app_request.py  test_add_privilege_to_role201_response.py  test_add_privilege_to_role_request.py  test_add_role_users200_response_inner.py  test_add_roles_to_user_request.py  test_add_scope_request.py  test_alt_err.py  test_api_auth_claims_api.py  test_api_auth_client_apps_api.py  test_api_auth_scopes_api.py  test_api_authorization_server_api.py  test_app_parameters.py  test_app_parameters_value.py  test_app_rule.py  test_app_rules_api.py  test_apps_api.py  test_assign_users_to_privilege_request.py  test_auth_claim.py  test_auth_factor.py  test_auth_id.py  test_auth_method.py  test_auth_scope.py  test_auth_server.py  test_auth_server_configuration.py  test_brand.py  test_brand_app.py  test_brand_background.py  test_brand_background_urls.py  test_brand_logo.py  test_brand_logo_urls.py  test_brand_req.py  test_branding_service_api.py  test_branding_service_smtp_api.py  test_branding_service_templates_api.py  (+295 more)
tests/: coverage.rc
(+1527 files in other folders)
