[project]
name = "onelogin"
version = "3.2.0"
description = "OneLogin API Python SDK"
authors = [
    {name = "OneLogin", email = "developers@onelogin.com"}
]
license = {text = "NoLicense"}
readme = "README.md"
keywords = ["OneLogin", "SDK", "API"]
requires-python = ">=3.7"
dependencies = [
    "urllib3>=2.0.2",
    "python-dateutil>=2.5.3",
    "pydantic>=2.11.0",
    "aenum>=3.1.11",
    "setuptools>=67.7.1",
]

[project.optional-dependencies]
test = [
    "pytest~=7.1.3",
    "pytest-cov>=2.8.1",
    "pytest-randomly>=3.12.0",
    "flake8>=4.0.0",
    "tox>=3.9.0",
]

[project.urls]
Repository = "https://github.com/onelogin/onelogin-python-sdk"

[build-system]
requires = ["setuptools>=67.7.1", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["onelogin"]
package-dir = {"" = "."}
include-package-data = true

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = "test_*.py"

[tool.flake8]
max-line-length = 99

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"
